@@ -60,23 +60,14 @@ class RegelBeregnFeriepengerTest {
         assertThat(resultat.resultat().feriepengerPeriode().getFomDato()).isEqualTo(LocalDate.of(2018, 1, 6));
         assertThat(resultat.resultat().feriepengerPeriode().getTomDato()).isEqualTo(LocalDate.of(2018, 3, 23));
 
-        resultat.resultat().beregningsresultatPerioder().stream().flatMap(p -> p.getBeregningsresultatAndelList().stream())
-                .forEach(andel -> assertThat(andel.getBeregningsresultatFeriepengerPrÅrListe()).hasSize(1));
-        var andelBruker1 = resultat.resultat().beregningsresultatPerioder().get(0).getBeregningsresultatAndelList().get(0);
-        var andelArbeidsgiver1 = resultat.resultat().beregningsresultatPerioder().get(0).getBeregningsresultatAndelList().get(1);
-        var andelBruker2 = resultat.resultat().beregningsresultatPerioder().get(0).getBeregningsresultatAndelList().get(2);
-        var andelArbeidsgiver2 = resultat.resultat().beregningsresultatPerioder().get(0).getBeregningsresultatAndelList().get(3);
-        var andelBruker3 = resultat.resultat().beregningsresultatPerioder().get(1).getBeregningsresultatAndelList().get(0);
-        var andelArbeidsgiver3 = resultat.resultat().beregningsresultatPerioder().get(1).getBeregningsresultatAndelList().get(1);
+        assertThat(resultat.resultat().beregningsresultatFeriepengerPrÅrListe()).hasSize(4);
+        var tilBruker = resultat.resultat().beregningsresultatFeriepengerPrÅrListe().stream().filter(f -> f.erBrukerMottaker()).toList();
+        var tilArbeidsgiver = resultat.resultat().beregningsresultatFeriepengerPrÅrListe().stream().filter(f -> !f.erBrukerMottaker()).toList();
 
-        assertThat(andelBruker1.getBeregningsresultatFeriepengerPrÅrListe().get(0).getÅrsbeløp()).isEqualByComparingTo(BigDecimal.valueOf(1606.5));
-        assertThat(andelBruker2.getBeregningsresultatFeriepengerPrÅrListe().get(0).getÅrsbeløp()).isEqualByComparingTo(BigDecimal.valueOf(459));
-        assertThat(andelArbeidsgiver1.getBeregningsresultatFeriepengerPrÅrListe().get(0).getÅrsbeløp())
-                .isEqualByComparingTo(BigDecimal.valueOf(2754));
-        assertThat(andelArbeidsgiver2.getBeregningsresultatFeriepengerPrÅrListe().get(0).getÅrsbeløp())
-                .isEqualByComparingTo(BigDecimal.valueOf(2295));
-        assertThat(andelBruker3.getBeregningsresultatFeriepengerPrÅrListe().get(0).getÅrsbeløp()).isEqualByComparingTo(BigDecimal.valueOf(76.5));
-        assertThat(andelArbeidsgiver3.getBeregningsresultatFeriepengerPrÅrListe().get(0).getÅrsbeløp()).isEqualByComparingTo(BigDecimal.valueOf(204));
+        assertThat(tilBruker).satisfiesOnlyOnce(v -> assertThat(v.getÅrsbeløp()).isEqualByComparingTo(BigDecimal.valueOf(1606.5 + 76.5)));
+        assertThat(tilBruker).satisfiesOnlyOnce(v -> assertThat(v.getÅrsbeløp()).isEqualByComparingTo(BigDecimal.valueOf(459)));
+        assertThat(tilArbeidsgiver).satisfiesOnlyOnce(v -> assertThat(v.getÅrsbeløp()).isEqualByComparingTo(BigDecimal.valueOf(2754 + 204)));
+        assertThat(tilArbeidsgiver).satisfiesOnlyOnce(v -> assertThat(v.getÅrsbeløp()).isEqualByComparingTo(BigDecimal.valueOf(2295)));
     }
 
     // Eksempel 1X Mor med avslag i første periode
@@ -97,15 +88,15 @@ class RegelBeregnFeriepengerTest {
 
         var annenPartsBeregningsresultatPerioder = List.of(periode1annenPart, periode2annenPart);
         var regelModell = BeregningsresultatFeriepengerGrunnlag.builder()
-                .medBeregningsresultatPerioder(List.of(periode0, periode1, periode2))
-                .medAnnenPartsBeregningsresultatPerioder(annenPartsBeregningsresultatPerioder)
-                .medInntektskategorier(Collections.singleton(Inntektskategori.ARBEIDSTAKER))
-                .medArbeidstakerVedSkjæringstidspunkt(true)
-                .medAnnenPartsInntektskategorier(Collections.singleton(Inntektskategori.ARBEIDSTAKER))
-                .medDekningsgrad(Dekningsgrad.DEKNINGSGRAD_100)
-                .medErForelder1(true)
-                .medAntallDagerFeriepenger(60)
-                .build();
+            .medBeregningsresultatPerioder(List.of(periode0, periode1, periode2))
+            .medAnnenPartsBeregningsresultatPerioder(annenPartsBeregningsresultatPerioder)
+            .medInntektskategorier(Collections.singleton(Inntektskategori.ARBEIDSTAKER))
+            .medArbeidstakerVedSkjæringstidspunkt(true)
+            .medAnnenPartsInntektskategorier(Collections.singleton(Inntektskategori.ARBEIDSTAKER))
+            .medDekningsgrad(Dekningsgrad.DEKNINGSGRAD_100)
+            .medErForelder1(true)
+            .medAntallDagerFeriepenger(60)
+            .build();
 
         // Act
         var resultat = BeregningsresultatRegler.fastsettFeriepenger(regelModell);
@@ -114,29 +105,14 @@ class RegelBeregnFeriepengerTest {
         assertThat(resultat.resultat().feriepengerPeriode().getFomDato()).isEqualTo(LocalDate.of(2018, 1, 6));
         assertThat(resultat.resultat().feriepengerPeriode().getTomDato()).isEqualTo(LocalDate.of(2018, 3, 23));
 
-        resultat.resultat().beregningsresultatPerioder().stream().flatMap(p -> p.getBeregningsresultatAndelList().stream())
-                .forEach(andel -> {
-                    if (andel.getDagsats() > 0) {
-                        assertThat(andel.getBeregningsresultatFeriepengerPrÅrListe()).hasSize(1);
-                    } else {
-                        assertThat(andel.getBeregningsresultatFeriepengerPrÅrListe()).isEmpty();
-                    }
-                });
-        var andelBruker1 = resultat.resultat().beregningsresultatPerioder().get(1).getBeregningsresultatAndelList().get(0);
-        var andelArbeidsgiver1 = resultat.resultat().beregningsresultatPerioder().get(1).getBeregningsresultatAndelList().get(1);
-        var andelBruker2 = resultat.resultat().beregningsresultatPerioder().get(1).getBeregningsresultatAndelList().get(2);
-        var andelArbeidsgiver2 = resultat.resultat().beregningsresultatPerioder().get(1).getBeregningsresultatAndelList().get(3);
-        var andelBruker3 = resultat.resultat().beregningsresultatPerioder().get(2).getBeregningsresultatAndelList().get(0);
-        var andelArbeidsgiver3 = resultat.resultat().beregningsresultatPerioder().get(2).getBeregningsresultatAndelList().get(1);
+        assertThat(resultat.resultat().beregningsresultatFeriepengerPrÅrListe()).hasSize(4);
+        var tilBruker = resultat.resultat().beregningsresultatFeriepengerPrÅrListe().stream().filter(f -> f.erBrukerMottaker()).toList();
+        var tilArbeidsgiver = resultat.resultat().beregningsresultatFeriepengerPrÅrListe().stream().filter(f -> !f.erBrukerMottaker()).toList();
 
-        assertThat(andelBruker1.getBeregningsresultatFeriepengerPrÅrListe().get(0).getÅrsbeløp()).isEqualByComparingTo(BigDecimal.valueOf(1606.5));
-        assertThat(andelBruker2.getBeregningsresultatFeriepengerPrÅrListe().get(0).getÅrsbeløp()).isEqualByComparingTo(BigDecimal.valueOf(459));
-        assertThat(andelArbeidsgiver1.getBeregningsresultatFeriepengerPrÅrListe().get(0).getÅrsbeløp())
-                .isEqualByComparingTo(BigDecimal.valueOf(2754));
-        assertThat(andelArbeidsgiver2.getBeregningsresultatFeriepengerPrÅrListe().get(0).getÅrsbeløp())
-                .isEqualByComparingTo(BigDecimal.valueOf(2295));
-        assertThat(andelBruker3.getBeregningsresultatFeriepengerPrÅrListe().get(0).getÅrsbeløp()).isEqualByComparingTo(BigDecimal.valueOf(76.5));
-        assertThat(andelArbeidsgiver3.getBeregningsresultatFeriepengerPrÅrListe().get(0).getÅrsbeløp()).isEqualByComparingTo(BigDecimal.valueOf(204));
+        assertThat(tilBruker).satisfiesOnlyOnce(v -> assertThat(v.getÅrsbeløp()).isEqualByComparingTo(BigDecimal.valueOf(1606.5 + 76.5)));
+        assertThat(tilBruker).satisfiesOnlyOnce(v -> assertThat(v.getÅrsbeløp()).isEqualByComparingTo(BigDecimal.valueOf(459)));
+        assertThat(tilArbeidsgiver).satisfiesOnlyOnce(v -> assertThat(v.getÅrsbeløp()).isEqualByComparingTo(BigDecimal.valueOf(2754 + 204)));
+        assertThat(tilArbeidsgiver).satisfiesOnlyOnce(v -> assertThat(v.getÅrsbeløp()).isEqualByComparingTo(BigDecimal.valueOf(2295)));
     }
 
     // Eksempel 1 Far
@@ -155,15 +131,15 @@ class RegelBeregnFeriepengerTest {
         byggAndelerForPeriode(periode2, 460, 1000, arbeidsforhold1);
 
         var regelModell = BeregningsresultatFeriepengerGrunnlag.builder()
-                .medBeregningsresultatPerioder(List.of(periode1, periode2))
-                .medAnnenPartsBeregningsresultatPerioder(annenPartsBeregningsresultatPerioder)
-                .medInntektskategorier(Collections.singleton(Inntektskategori.ARBEIDSTAKER))
-                .medArbeidstakerVedSkjæringstidspunkt(true)
-                .medAnnenPartsInntektskategorier(Collections.singleton(Inntektskategori.ARBEIDSTAKER))
-                .medDekningsgrad(Dekningsgrad.DEKNINGSGRAD_100)
-                .medErForelder1(false)
-                .medAntallDagerFeriepenger(60)
-                .build();
+            .medBeregningsresultatPerioder(List.of(periode1, periode2))
+            .medAnnenPartsBeregningsresultatPerioder(annenPartsBeregningsresultatPerioder)
+            .medInntektskategorier(Collections.singleton(Inntektskategori.ARBEIDSTAKER))
+            .medArbeidstakerVedSkjæringstidspunkt(true)
+            .medAnnenPartsInntektskategorier(Collections.singleton(Inntektskategori.ARBEIDSTAKER))
+            .medDekningsgrad(Dekningsgrad.DEKNINGSGRAD_100)
+            .medErForelder1(false)
+            .medAntallDagerFeriepenger(60)
+            .build();
 
         // Act
         var resultat = BeregningsresultatRegler.fastsettFeriepenger(regelModell);
@@ -172,18 +148,14 @@ class RegelBeregnFeriepengerTest {
         assertThat(resultat.resultat().feriepengerPeriode().getFomDato()).isEqualTo(LocalDate.of(2018, 1, 6));
         assertThat(resultat.resultat().feriepengerPeriode().getTomDato()).isEqualTo(LocalDate.of(2018, 3, 23));
 
-        resultat.resultat().beregningsresultatPerioder().stream().flatMap(p -> p.getBeregningsresultatAndelList().stream())
-                .forEach(andel -> assertThat(andel.getBeregningsresultatFeriepengerPrÅrListe()).hasSize(1));
-        var andelBruker1 = resultat.resultat().beregningsresultatPerioder().get(0).getBeregningsresultatAndelList().get(0);
-        var andelArbeidsgiver1 = resultat.resultat().beregningsresultatPerioder().get(0).getBeregningsresultatAndelList().get(1);
-        var andelBruker2 = resultat.resultat().beregningsresultatPerioder().get(1).getBeregningsresultatAndelList().get(0);
-        var andelArbeidsgiver2 = resultat.resultat().beregningsresultatPerioder().get(1).getBeregningsresultatAndelList().get(1);
+        assertThat(resultat.resultat().beregningsresultatFeriepengerPrÅrListe()).hasSize(2);
+        var tilBruker = resultat.resultat().beregningsresultatFeriepengerPrÅrListe().stream().filter(f -> f.erBrukerMottaker()).toList();
+        var tilArbeidsgiver = resultat.resultat().beregningsresultatFeriepengerPrÅrListe().stream().filter(f -> !f.erBrukerMottaker()).toList();
 
-        assertThat(andelBruker1.getBeregningsresultatFeriepengerPrÅrListe().get(0).getÅrsbeløp()).isEqualByComparingTo(BigDecimal.valueOf(76.5));
-        assertThat(andelBruker2.getBeregningsresultatFeriepengerPrÅrListe().get(0).getÅrsbeløp()).isEqualByComparingTo(BigDecimal.valueOf(234.6));
-        assertThat(andelArbeidsgiver1.getBeregningsresultatFeriepengerPrÅrListe().get(0).getÅrsbeløp()).isEqualByComparingTo(BigDecimal.valueOf(204));
-        assertThat(andelArbeidsgiver2.getBeregningsresultatFeriepengerPrÅrListe().get(0).getÅrsbeløp()).isEqualByComparingTo(BigDecimal.valueOf(510));
+        assertThat(tilBruker).satisfiesOnlyOnce(v -> assertThat(v.getÅrsbeløp()).isEqualByComparingTo(BigDecimal.valueOf(234.5 + 76.5)));
+        assertThat(tilArbeidsgiver).satisfiesOnlyOnce(v -> assertThat(v.getÅrsbeløp()).isEqualByComparingTo(BigDecimal.valueOf(510 + 204)));
     }
+
 
     // Eksempel 2 Mor
     @Test
@@ -201,15 +173,15 @@ class RegelBeregnFeriepengerTest {
         var annenPartsBeregningsresultatPerioder = List.of(periode1annenPart);
 
         var regelModell = BeregningsresultatFeriepengerGrunnlag.builder()
-                .medBeregningsresultatPerioder(List.of(periode1, periode2, periode3))
-                .medAnnenPartsBeregningsresultatPerioder(annenPartsBeregningsresultatPerioder)
-                .medInntektskategorier(Collections.singleton(Inntektskategori.ARBEIDSTAKER))
-                .medArbeidstakerVedSkjæringstidspunkt(true)
-                .medAnnenPartsInntektskategorier(Collections.singleton(Inntektskategori.ARBEIDSTAKER))
-                .medDekningsgrad(Dekningsgrad.DEKNINGSGRAD_100)
-                .medErForelder1(true)
-                .medAntallDagerFeriepenger(60)
-                .build();
+            .medBeregningsresultatPerioder(List.of(periode1, periode2, periode3))
+            .medAnnenPartsBeregningsresultatPerioder(annenPartsBeregningsresultatPerioder)
+            .medInntektskategorier(Collections.singleton(Inntektskategori.ARBEIDSTAKER))
+            .medArbeidstakerVedSkjæringstidspunkt(true)
+            .medAnnenPartsInntektskategorier(Collections.singleton(Inntektskategori.ARBEIDSTAKER))
+            .medDekningsgrad(Dekningsgrad.DEKNINGSGRAD_100)
+            .medErForelder1(true)
+            .medAntallDagerFeriepenger(60)
+            .build();
 
         // Act
         var resultat = BeregningsresultatRegler.fastsettFeriepenger(regelModell);
@@ -218,27 +190,14 @@ class RegelBeregnFeriepengerTest {
         assertThat(resultat.resultat().feriepengerPeriode().getFomDato()).isEqualTo(LocalDate.of(2018, 1, 17));
         assertThat(resultat.resultat().feriepengerPeriode().getTomDato()).isEqualTo(LocalDate.of(2018, 4, 4));
 
-        assertThat(resultat.resultat().beregningsresultatPerioder().stream().flatMap(p -> p.getBeregningsresultatAndelList().stream())
-                .flatMap(a -> a.getBeregningsresultatFeriepengerPrÅrListe().stream()).toList()).hasSize(6);
-        resultat.resultat().beregningsresultatPerioder().get(0).getBeregningsresultatAndelList().forEach(andel -> assertThat(andel.getBeregningsresultatFeriepengerPrÅrListe()).hasSize(1));
-        resultat.resultat().beregningsresultatPerioder().get(1).getBeregningsresultatAndelList().forEach(andel -> assertThat(andel.getBeregningsresultatFeriepengerPrÅrListe()).isEmpty());
-        resultat.resultat().beregningsresultatPerioder().get(2).getBeregningsresultatAndelList().forEach(andel -> assertThat(andel.getBeregningsresultatFeriepengerPrÅrListe()).hasSize(1));
+        assertThat(resultat.resultat().beregningsresultatFeriepengerPrÅrListe()).hasSize(4);
+        var tilBruker = resultat.resultat().beregningsresultatFeriepengerPrÅrListe().stream().filter(f -> f.erBrukerMottaker()).toList();
+        var tilArbeidsgiver = resultat.resultat().beregningsresultatFeriepengerPrÅrListe().stream().filter(f -> !f.erBrukerMottaker()).toList();
 
-        var andelBruker1 = resultat.resultat().beregningsresultatPerioder().get(0).getBeregningsresultatAndelList().get(0);
-        var andelArbeidsgiver1 = resultat.resultat().beregningsresultatPerioder().get(0).getBeregningsresultatAndelList().get(1);
-        var andelBruker2 = resultat.resultat().beregningsresultatPerioder().get(0).getBeregningsresultatAndelList().get(2);
-        var andelArbeidsgiver2 = resultat.resultat().beregningsresultatPerioder().get(0).getBeregningsresultatAndelList().get(3);
-        var andelBruker4 = resultat.resultat().beregningsresultatPerioder().get(2).getBeregningsresultatAndelList().get(0);
-        var andelArbeidsgiver4 = resultat.resultat().beregningsresultatPerioder().get(2).getBeregningsresultatAndelList().get(1);
-
-        assertThat(andelBruker1.getBeregningsresultatFeriepengerPrÅrListe().get(0).getÅrsbeløp()).isEqualByComparingTo(BigDecimal.valueOf(1606.5));
-        assertThat(andelBruker2.getBeregningsresultatFeriepengerPrÅrListe().get(0).getÅrsbeløp()).isEqualByComparingTo(BigDecimal.valueOf(459));
-        assertThat(andelArbeidsgiver1.getBeregningsresultatFeriepengerPrÅrListe().get(0).getÅrsbeløp())
-                .isEqualByComparingTo(BigDecimal.valueOf(2754));
-        assertThat(andelArbeidsgiver2.getBeregningsresultatFeriepengerPrÅrListe().get(0).getÅrsbeløp())
-                .isEqualByComparingTo(BigDecimal.valueOf(2295));
-        assertThat(andelBruker4.getBeregningsresultatFeriepengerPrÅrListe().get(0).getÅrsbeløp()).isEqualByComparingTo(BigDecimal.valueOf(178.5));
-        assertThat(andelArbeidsgiver4.getBeregningsresultatFeriepengerPrÅrListe().get(0).getÅrsbeløp()).isEqualByComparingTo(BigDecimal.valueOf(306));
+        assertThat(tilBruker).satisfiesOnlyOnce(v -> assertThat(v.getÅrsbeløp()).isEqualByComparingTo(BigDecimal.valueOf(1606.5 + 178.5)));
+        assertThat(tilBruker).satisfiesOnlyOnce(v -> assertThat(v.getÅrsbeløp()).isEqualByComparingTo(BigDecimal.valueOf(459)));
+        assertThat(tilArbeidsgiver).satisfiesOnlyOnce(v -> assertThat(v.getÅrsbeløp()).isEqualByComparingTo(BigDecimal.valueOf(2754 + 306)));
+        assertThat(tilArbeidsgiver).satisfiesOnlyOnce(v -> assertThat(v.getÅrsbeløp()).isEqualByComparingTo(BigDecimal.valueOf(2295)));
     }
 
     // Eksempel 2 Far
@@ -256,15 +215,15 @@ class RegelBeregnFeriepengerTest {
         var annenPartsBeregningsresultatPerioder = List.of(periode1annenPart, periode2annenPart, periode3annenPart);
 
         var regelModell = BeregningsresultatFeriepengerGrunnlag.builder()
-                .medBeregningsresultatPerioder(List.of(periode1))
-                .medAnnenPartsBeregningsresultatPerioder(annenPartsBeregningsresultatPerioder)
-                .medInntektskategorier(Collections.singleton(Inntektskategori.ARBEIDSTAKER))
-                .medArbeidstakerVedSkjæringstidspunkt(true)
-                .medAnnenPartsInntektskategorier(Collections.singleton(Inntektskategori.ARBEIDSTAKER))
-                .medDekningsgrad(Dekningsgrad.DEKNINGSGRAD_100)
-                .medErForelder1(false)
-                .medAntallDagerFeriepenger(60)
-                .build();
+            .medBeregningsresultatPerioder(List.of(periode1))
+            .medAnnenPartsBeregningsresultatPerioder(annenPartsBeregningsresultatPerioder)
+            .medInntektskategorier(Collections.singleton(Inntektskategori.ARBEIDSTAKER))
+            .medArbeidstakerVedSkjæringstidspunkt(true)
+            .medAnnenPartsInntektskategorier(Collections.singleton(Inntektskategori.ARBEIDSTAKER))
+            .medDekningsgrad(Dekningsgrad.DEKNINGSGRAD_100)
+            .medErForelder1(false)
+            .medAntallDagerFeriepenger(60)
+            .build();
 
         // Act
         var resultat = BeregningsresultatRegler.fastsettFeriepenger(regelModell);
@@ -273,17 +232,12 @@ class RegelBeregnFeriepengerTest {
         assertThat(resultat.resultat().feriepengerPeriode().getFomDato()).isEqualTo(LocalDate.of(2018, 1, 17));
         assertThat(resultat.resultat().feriepengerPeriode().getTomDato()).isEqualTo(LocalDate.of(2018, 4, 3));
 
-        assertThat(resultat.resultat().beregningsresultatPerioder().stream().flatMap(p -> p.getBeregningsresultatAndelList().stream())
-                .flatMap(a -> a.getBeregningsresultatFeriepengerPrÅrListe().stream()).toList()).hasSize(2);
-        var aPeriode1 = resultat.resultat().beregningsresultatPerioder().stream()
-            .filter(p -> p.getPeriode().equals(periode1.getPeriode())).findFirst().orElseThrow();
-        aPeriode1.getBeregningsresultatAndelList().forEach(andel -> assertThat(andel.getBeregningsresultatFeriepengerPrÅrListe()).hasSize(1));
+        assertThat(resultat.resultat().beregningsresultatFeriepengerPrÅrListe()).hasSize(2);
+        var tilBruker = resultat.resultat().beregningsresultatFeriepengerPrÅrListe().stream().filter(f -> f.erBrukerMottaker()).toList();
+        var tilArbeidsgiver = resultat.resultat().beregningsresultatFeriepengerPrÅrListe().stream().filter(f -> !f.erBrukerMottaker()).toList();
 
-        var andelBruker1 = aPeriode1.getBeregningsresultatAndelList().get(0);
-        var andelArbeidsgiver1 = aPeriode1.getBeregningsresultatAndelList().get(1);
-
-        assertThat(andelBruker1.getBeregningsresultatFeriepengerPrÅrListe().get(0).getÅrsbeløp()).isEqualByComparingTo(BigDecimal.valueOf(153));
-        assertThat(andelArbeidsgiver1.getBeregningsresultatFeriepengerPrÅrListe().get(0).getÅrsbeløp()).isEqualByComparingTo(BigDecimal.valueOf(408));
+        assertThat(tilBruker).satisfiesOnlyOnce(v -> assertThat(v.getÅrsbeløp()).isEqualByComparingTo(BigDecimal.valueOf(153)));
+        assertThat(tilArbeidsgiver).satisfiesOnlyOnce(v -> assertThat(v.getÅrsbeløp()).isEqualByComparingTo(BigDecimal.valueOf(408)));
     }
 
     @Test
@@ -300,15 +254,15 @@ class RegelBeregnFeriepengerTest {
         var annenPartsBeregningsresultatPerioder = List.of(periode1annenPart);
 
         var regelModell = BeregningsresultatFeriepengerGrunnlag.builder()
-                .medBeregningsresultatPerioder(List.of(periode1, periode2, periode3))
-                .medAnnenPartsBeregningsresultatPerioder(annenPartsBeregningsresultatPerioder)
-                .medInntektskategorier(Collections.singleton(Inntektskategori.ARBEIDSTAKER))
-                .medArbeidstakerVedSkjæringstidspunkt(true)
-                .medAnnenPartsInntektskategorier(Collections.singleton(Inntektskategori.SJØMANN))
-                .medDekningsgrad(Dekningsgrad.DEKNINGSGRAD_80)
-                .medErForelder1(true)
-                .medAntallDagerFeriepenger(60)
-                .build();
+            .medBeregningsresultatPerioder(List.of(periode1, periode2, periode3))
+            .medAnnenPartsBeregningsresultatPerioder(annenPartsBeregningsresultatPerioder)
+            .medInntektskategorier(Collections.singleton(Inntektskategori.ARBEIDSTAKER))
+            .medArbeidstakerVedSkjæringstidspunkt(true)
+            .medAnnenPartsInntektskategorier(Collections.singleton(Inntektskategori.SJØMANN))
+            .medDekningsgrad(Dekningsgrad.DEKNINGSGRAD_80)
+            .medErForelder1(true)
+            .medAntallDagerFeriepenger(60)
+            .build();
 
         // Act
         var resultat = BeregningsresultatRegler.fastsettFeriepenger(regelModell);
@@ -317,21 +271,13 @@ class RegelBeregnFeriepengerTest {
         assertThat(resultat.resultat().feriepengerPeriode().getFomDato()).isEqualTo(LocalDate.of(2018, 11, 1));
         assertThat(resultat.resultat().feriepengerPeriode().getTomDato()).isEqualTo(LocalDate.of(2019, 2, 21));
 
-        resultat.resultat().beregningsresultatPerioder().get(0).getBeregningsresultatAndelList()
-                .forEach(andel -> assertThat(andel.getBeregningsresultatFeriepengerPrÅrListe()).hasSize(2));
-        resultat.resultat().beregningsresultatPerioder().get(1).getBeregningsresultatAndelList()
-                .forEach(andel -> assertThat(andel.getBeregningsresultatFeriepengerPrÅrListe()).isEmpty());
-        resultat.resultat().beregningsresultatPerioder().get(2).getBeregningsresultatAndelList()
-                .forEach(andel -> assertThat(andel.getBeregningsresultatFeriepengerPrÅrListe()).hasSize(1));
-        var andelBruker1 = resultat.resultat().beregningsresultatPerioder().get(0).getBeregningsresultatAndelList().get(0);
-        var andelBruker2 = resultat.resultat().beregningsresultatPerioder().get(2).getBeregningsresultatAndelList().get(0);
-        var andelArbeidsgiver = resultat.resultat().beregningsresultatPerioder().get(2).getBeregningsresultatAndelList().get(1);
+        assertThat(resultat.resultat().beregningsresultatFeriepengerPrÅrListe()).hasSize(3);
+        var tilBruker = resultat.resultat().beregningsresultatFeriepengerPrÅrListe().stream().filter(f -> f.erBrukerMottaker()).toList();
+        var tilArbeidsgiver = resultat.resultat().beregningsresultatFeriepengerPrÅrListe().stream().filter(f -> !f.erBrukerMottaker()).toList();
 
-        assertThat(andelBruker1.getBeregningsresultatFeriepengerPrÅrListe().get(0).getÅrsbeløp()).isEqualByComparingTo(BigDecimal.valueOf(4386));
-        assertThat(andelBruker1.getBeregningsresultatFeriepengerPrÅrListe().get(1).getÅrsbeløp()).isEqualByComparingTo(BigDecimal.valueOf(408));
-
-        assertThat(andelBruker2.getBeregningsresultatFeriepengerPrÅrListe().get(0).getÅrsbeløp()).isEqualByComparingTo(BigDecimal.valueOf(612));
-        assertThat(andelArbeidsgiver.getBeregningsresultatFeriepengerPrÅrListe().get(0).getÅrsbeløp()).isEqualByComparingTo(BigDecimal.valueOf(612));
+        assertThat(tilBruker).satisfiesOnlyOnce(v -> assertThat(v.getÅrsbeløp()).isEqualByComparingTo(BigDecimal.valueOf(4386))); // 43d a 1000
+        assertThat(tilBruker).satisfiesOnlyOnce(v -> assertThat(v.getÅrsbeløp()).isEqualByComparingTo(BigDecimal.valueOf(1020))); // 4d a 1000 + 12d a 500
+        assertThat(tilArbeidsgiver).satisfiesOnlyOnce(v -> assertThat(v.getÅrsbeløp()).isEqualByComparingTo(BigDecimal.valueOf(612))); // 12d a 500
     }
 
     @Test
@@ -340,15 +286,15 @@ class RegelBeregnFeriepengerTest {
         byggAndelerForPeriode(periode1, 1000, 0, arbeidsforhold1);
 
         var regelModell = BeregningsresultatFeriepengerGrunnlag.builder()
-                .medBeregningsresultatPerioder(List.of(periode1))
-                .medAnnenPartsBeregningsresultatPerioder(Collections.emptyList())
-                .medInntektskategorier(Collections.singleton(Inntektskategori.ARBEIDSTAKER))
-                .medArbeidstakerVedSkjæringstidspunkt(true)
-                .medAnnenPartsInntektskategorier(Collections.emptySet())
-                .medDekningsgrad(Dekningsgrad.DEKNINGSGRAD_100)
-                .medErForelder1(true)
-                .medAntallDagerFeriepenger(60)
-                .build();
+            .medBeregningsresultatPerioder(List.of(periode1))
+            .medAnnenPartsBeregningsresultatPerioder(Collections.emptyList())
+            .medInntektskategorier(Collections.singleton(Inntektskategori.ARBEIDSTAKER))
+            .medArbeidstakerVedSkjæringstidspunkt(true)
+            .medAnnenPartsInntektskategorier(Collections.emptySet())
+            .medDekningsgrad(Dekningsgrad.DEKNINGSGRAD_100)
+            .medErForelder1(true)
+            .medAntallDagerFeriepenger(60)
+            .build();
 
         // Act
         var resultat = BeregningsresultatRegler.fastsettFeriepenger(regelModell);
@@ -357,11 +303,12 @@ class RegelBeregnFeriepengerTest {
         assertThat(resultat.resultat().feriepengerPeriode().getFomDato()).isEqualTo(LocalDate.of(2018, 11, 1));
         assertThat(resultat.resultat().feriepengerPeriode().getTomDato()).isEqualTo(LocalDate.of(2018, 12, 31));
 
-        resultat.resultat().beregningsresultatPerioder().get(0).getBeregningsresultatAndelList()
-                .forEach(andel -> assertThat(andel.getBeregningsresultatFeriepengerPrÅrListe()).hasSize(1));
-        var andelBruker1 = resultat.resultat().beregningsresultatPerioder().get(0).getBeregningsresultatAndelList().get(0);
+        assertThat(resultat.resultat().beregningsresultatFeriepengerPrÅrListe()).hasSize(1);
+        var tilBruker = resultat.resultat().beregningsresultatFeriepengerPrÅrListe().stream().filter(f -> f.erBrukerMottaker()).toList();
+        var tilArbeidsgiver = resultat.resultat().beregningsresultatFeriepengerPrÅrListe().stream().filter(f -> !f.erBrukerMottaker()).toList();
 
-        assertThat(andelBruker1.getBeregningsresultatFeriepengerPrÅrListe().get(0).getÅrsbeløp()).isEqualByComparingTo(BigDecimal.valueOf(4386));
+        assertThat(tilBruker).satisfiesOnlyOnce(v -> assertThat(v.getÅrsbeløp()).isEqualByComparingTo(BigDecimal.valueOf(4386)));
+        assertThat(tilArbeidsgiver).isEmpty();
     }
 
     @Test
@@ -372,15 +319,15 @@ class RegelBeregnFeriepengerTest {
         byggAndelerForPeriode(periode2, 300, 200, arbeidsforhold1);
 
         var regelModell = BeregningsresultatFeriepengerGrunnlag.builder()
-                .medBeregningsresultatPerioder(List.of(periode1, periode2))
-                .medAnnenPartsBeregningsresultatPerioder(List.of())
-                .medInntektskategorier(Set.of(Inntektskategori.ARBEIDSTAKER))
-                .medArbeidstakerVedSkjæringstidspunkt(true)
-                .medAnnenPartsInntektskategorier(Set.of())
-                .medDekningsgrad(Dekningsgrad.DEKNINGSGRAD_100)
-                .medErForelder1(true)
-                .medAntallDagerFeriepenger(64) // SVP-spesifikt
-                .build();
+            .medBeregningsresultatPerioder(List.of(periode1, periode2))
+            .medAnnenPartsBeregningsresultatPerioder(List.of())
+            .medInntektskategorier(Set.of(Inntektskategori.ARBEIDSTAKER))
+            .medArbeidstakerVedSkjæringstidspunkt(true)
+            .medAnnenPartsInntektskategorier(Set.of())
+            .medDekningsgrad(Dekningsgrad.DEKNINGSGRAD_100)
+            .medErForelder1(true)
+            .medAntallDagerFeriepenger(64) // SVP-spesifikt
+            .build();
 
         // Act
         var resultat = BeregningsresultatRegler.fastsettFeriepenger(regelModell);
@@ -389,11 +336,12 @@ class RegelBeregnFeriepengerTest {
         assertThat(resultat.resultat().feriepengerPeriode().getFomDato()).isEqualTo(LocalDate.of(2018, 1, 6));
         assertThat(resultat.resultat().feriepengerPeriode().getTomDato()).isEqualTo(LocalDate.of(2018, 4, 5));
 
-        resultat.resultat().beregningsresultatPerioder().get(0).getBeregningsresultatAndelList()
-            .forEach(andel -> assertThat(andel.getBeregningsresultatFeriepengerPrÅrListe()).hasSize(1));
+        assertThat(resultat.resultat().beregningsresultatFeriepengerPrÅrListe()).hasSize(2);
+        var tilBruker = resultat.resultat().beregningsresultatFeriepengerPrÅrListe().stream().filter(f -> f.erBrukerMottaker()).toList();
+        var tilArbeidsgiver = resultat.resultat().beregningsresultatFeriepengerPrÅrListe().stream().filter(f -> !f.erBrukerMottaker()).toList();
 
-        assertThat(resultat.resultat().beregningsresultatPerioder().get(0).getBeregningsresultatAndelList().get(0).getBeregningsresultatFeriepengerPrÅrListe().get(0).getÅrsbeløp())
-            .isEqualByComparingTo(BigDecimal.valueOf(3213));
+        assertThat(tilBruker).satisfiesOnlyOnce(v -> assertThat(v.getÅrsbeløp()).isEqualByComparingTo(BigDecimal.valueOf(3794))); // 45d a 700, 19d a 300
+        assertThat(tilArbeidsgiver).satisfiesOnlyOnce(v -> assertThat(v.getÅrsbeløp()).isEqualByComparingTo(BigDecimal.valueOf(2683))); // 45d a 500, 19d a 200
     }
 
     @Test
@@ -420,8 +368,7 @@ class RegelBeregnFeriepengerTest {
         assertThat(resultat.regelSporing()).isNotNull();
         assertThat(resultat.resultat().feriepengerPeriode()).isNull();
 
-        resultat.resultat().beregningsresultatPerioder().get(0).getBeregningsresultatAndelList()
-            .forEach(andel -> assertThat(andel.getBeregningsresultatFeriepengerPrÅrListe()).isEmpty());
+        assertThat(resultat.resultat().beregningsresultatFeriepengerPrÅrListe()).isEmpty();
     }
 
     @Test
@@ -449,8 +396,7 @@ class RegelBeregnFeriepengerTest {
         assertThat(resultat.regelSporing()).isNotNull();
         assertThat(resultat.resultat().feriepengerPeriode()).isNull();
 
-        resultat.resultat().beregningsresultatPerioder().get(0).getBeregningsresultatAndelList()
-            .forEach(andel -> assertThat(andel.getBeregningsresultatFeriepengerPrÅrListe()).isEmpty());
+        assertThat(resultat.resultat().beregningsresultatFeriepengerPrÅrListe()).isEmpty();
     }
 
     // Skal beregne feriepenger fom tilkommet AT-andel
@@ -480,24 +426,14 @@ class RegelBeregnFeriepengerTest {
         assertThat(resultat.resultat().feriepengerPeriode().getFomDato()).isEqualTo(LocalDate.of(2018, 3, 10));
         assertThat(resultat.resultat().feriepengerPeriode().getTomDato()).isEqualTo(LocalDate.of(2018, 6, 7));
 
-        resultat.resultat().beregningsresultatPerioder().get(0).getBeregningsresultatAndelList()
-            .forEach(andel -> assertThat(andel.getBeregningsresultatFeriepengerPrÅrListe()).isEmpty());
-        resultat.resultat().beregningsresultatPerioder().get(1).getBeregningsresultatAndelList()
-            .stream().filter(p -> Inntektskategori.ARBEIDSTAKER.equals(p.getInntektskategori()))
-            .forEach(andel -> assertThat(andel.getBeregningsresultatFeriepengerPrÅrListe()).hasSize(1));
+        assertThat(resultat.resultat().beregningsresultatFeriepengerPrÅrListe()).hasSize(2);
+        var tilBruker = resultat.resultat().beregningsresultatFeriepengerPrÅrListe().stream().filter(f -> f.erBrukerMottaker()).toList();
+        var tilArbeidsgiver = resultat.resultat().beregningsresultatFeriepengerPrÅrListe().stream().filter(f -> !f.erBrukerMottaker()).toList();
 
-        assertThat(resultat.resultat().beregningsresultatPerioder().get(0).getBeregningsresultatAndelList().get(0).getInntektskategori()).isEqualTo(Inntektskategori.SELVSTENDIG_NÆRINGSDRIVENDE);
-        assertThat(resultat.resultat().beregningsresultatPerioder().get(0).getBeregningsresultatAndelList().get(0).getBeregningsresultatFeriepengerPrÅrListe()).isEmpty();
-
-        var p2 = resultat.resultat().beregningsresultatPerioder().get(1);
-        assertThat(p2.getBeregningsresultatAndelList().stream().filter(a -> Inntektskategori.SELVSTENDIG_NÆRINGSDRIVENDE.equals(a.getInntektskategori())).findFirst())
-            .hasValueSatisfying(a -> assertThat(a.getBeregningsresultatFeriepengerPrÅrListe()).isEmpty());
-        assertThat(p2.getBeregningsresultatAndelList().stream().filter(a -> Inntektskategori.ARBEIDSTAKER.equals(a.getInntektskategori()) && a.erBrukerMottaker()).findFirst())
-            .hasValueSatisfying(a -> assertThat(a.getBeregningsresultatFeriepengerPrÅrListe().get(0).getÅrsbeløp()).isEqualByComparingTo(BigDecimal.valueOf(4080)));
-        assertThat(p2.getBeregningsresultatAndelList().stream().filter(a -> Inntektskategori.ARBEIDSTAKER.equals(a.getInntektskategori()) && !a.erBrukerMottaker()).findFirst())
-            .hasValueSatisfying(a -> assertThat(a.getBeregningsresultatFeriepengerPrÅrListe().get(0).getÅrsbeløp()).isEqualByComparingTo(BigDecimal.valueOf(1632)));
-
+        assertThat(tilBruker).satisfiesOnlyOnce(v -> assertThat(v.getÅrsbeløp()).isEqualByComparingTo(BigDecimal.valueOf(4080)));
+        assertThat(tilArbeidsgiver).satisfiesOnlyOnce(v -> assertThat(v.getÅrsbeløp()).isEqualByComparingTo(BigDecimal.valueOf(1632)));
     }
+
 
     private BeregningsresultatPeriode byggBRPeriode(LocalDate fom, LocalDate tom) {
         return new BeregningsresultatPeriode(fom, tom);
